Ignore "DJ" prefix when sorting in collection browser. Patch by Richard Longland <rlongland@hotmail.com>.

BUG: 181955
CCMAIL: rlongland@hotmail.com