src/core/meta/Meta.cpp
@@ -412,12 +412,16 @@ Meta::Artist::operator==( const Meta::Artist &artist ) const
 QString
 Meta::Artist::sortableName() const
 {
-    if ( m_sortableName.isEmpty() && !name().isEmpty() ) {
-        if ( name().startsWith( "the ", Qt::CaseInsensitive ) ) {
+    if( m_sortableName.isEmpty() && !name().isEmpty() ) {
+        if( name().startsWith( "the ", Qt::CaseInsensitive ) ) {
             QString begin = name().left( 3 );
             m_sortableName = QString( "%1, %2" ).arg( name(), begin );
             m_sortableName = m_sortableName.mid( 4 );
-        }
+        } else if( name().startsWith( "dj ", Qt::CaseInsensitive ) ) {
+            QString begin = name().left( 2 );
+            m_sortableName = QString( "%1, %2" ).arg( name(), begin );
+            m_sortableName = m_sortableName.mid( 3 );
+    }
         else
             m_sortableName = name();
     }
